--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,6 +42,10 @@
   --font-exo: var(--font-exo);
 }
 
+.font-exo {
+  font-family: var(--font-exo);
+}
+
 body {
   font-family: var(--font-lato);
 }
